update about section with image and word sided

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   text-align: center;
   width: 300px;
   height: 300px;
+  margine: 20px;
 }
 #slide-window {
     position: relative;
@@ -556,30 +557,9 @@
   <div class="w3-row-padding w3-grayscale">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/images/selfportraitSmall.jpg" alt="line drawing of person's head and shoulders facing forward" width="300" height="300">
-      <h3>About</h3>
-       <p>Bernice Wicks likes wrens, and the way they collectively dive into a bush.  She also likes the sudden appearance of foxgloves on a bike ride, and the ocean on a windy June night. For these reasons she is grateful to the generosity of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors and families for allowing her to live on their Land.  She recognizes that settler oppression of Indigenous peoples exists and a more equitable society must be created. She has been published by Geist Magazine. </p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
-      <h3>Jane Doe</h3>
-      <p class="w3-opacity">Architect</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
-      <h3>Mike Ross</h3>
-      <p class="w3-opacity">Architect</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/w3images/team4.jpg" alt="Dan" style="width:100%">
-      <h3>Dan Star</h3>
-      <p class="w3-opacity">Architect</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
+      <p>Bernice Wicks likes wrens, and the way they collectively dive into a bush.  She also likes the sudden appearance of foxgloves on a bike ride, and the ocean on a windy June night. For these reasons she is grateful to the generosity of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors and families for allowing her to live on their Land.  She recognizes that settler oppression of Indigenous peoples exists and a more equitable society must be created. She has been published by Geist Magazine. </p>
     </div>
   </div>
 
