about and grid gap

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   grid-template-columns: auto auto auto;
   background-color: transparent;
   padding: 10px;
+  grid-gap: 50px;
 }
 .grid-item {
   background-color: transparent;
@@ -20,7 +21,6 @@
   text-align: center;
   width: 300px;
   height: 300px;
-  margine: 20px;
 }
 #slide-window {
     position: relative;
@@ -558,8 +558,12 @@
     <div class="w3-col l3 m6 w3-margin-bottom">
       <img src="/images/selfportraitSmall.jpg" alt="line drawing of person's head and shoulders facing forward" width="300" height="300">
     </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <p>Bernice Wicks likes wrens, and the way they collectively dive into a bush.  She also likes the sudden appearance of foxgloves on a bike ride, and the ocean on a windy June night. For these reasons she is grateful to the generosity of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors and families for allowing her to live on their Land.  She recognizes that settler oppression of Indigenous peoples exists and a more equitable society must be created. She has been published by Geist Magazine. </p>
+    <div>
+      <p>Bernice Wicks likes wrens, and the way they collectively dive into a bush.  She also likes the sudden appearance of foxgloves on a bike ride, \
+and the ocean on a windy June night. For these reasons she is grateful to the generosity of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors \
+and families for allowing her to live on their Land.  She recognizes that settler oppression of Indigenous peoples exists and a more equitable society \
+must be created. <br>
+She has been published by <i>Geist Magazine</i>. </p>
     </div>
   </div>
 
