--- a/index.html
+++ b/index.html
@@ -234,102 +234,7 @@
     width: 40px;
 }
 </style>
-</head>
-<body>
-
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-    <a href="#home" class="w3-bar-item w3-button">Bernice Wicks Comics</a>
-    <!-- Float links to the right. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="#comics" class="w3-bar-item w3-button">Comics</a>
-      <a href="#about" class="w3-bar-item w3-button">About</a>
-      <a href="#drawings" class="w3-bar-item w3-button">Drawings</a>
-    </div>
-  </div>
-</div>
-
-<!-- Header -->
-<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-  <img class="w3-image" src="/images/tree.jpg" alt="tree" width="1500" height="800">
-  <div class="w3-display-middle w3-margin-top w3-center">
-    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min">Bernice Wicks</span> <span class="w3-hide-small w3-text-light-grey">Comics</span></h1>
-  </div>
-</header>
-
-<!-- Page content -->
-<div class="w3-content w3-padding" style="max-width:1564px">
-
-  <!-- Comics Section -->
- 
-  <div class="w3-container w3-padding-32" id="comics">
-    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Comics</h3>
-  </div>
-
-  <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Rain</div>
-        <div id="slide-window2">
-            <ol id="slides-list2">
-                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky1.jpg);"></li>
-                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky2.jpg);"></li>
-                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky3.jpg);"></li>
-                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky4.jpg);"></li>
-            </ol>
-            <span class="nav2 fa fa-chevron-left fa-2x" id="left2"></span>
-            <span class="nav2 fa fa-chevron-right fa-2x" id="right2"></span>
-        </div>
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="/w3images/house2.jpg" alt="House" style="width:100%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="/w3images/house3.jpg" alt="House" style="width:100%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="/w3images/house4.jpg" alt="House" style="width:100%">
-      </div>
-    </div>
-  </div>
-
-  <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="/w3images/house2.jpg" alt="House" style="width:99%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="/w3images/house5.jpg" alt="House" style="width:99%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="/w3images/house4.jpg" alt="House" style="width:99%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="/w3images/house3.jpg" alt="House" style="width:99%">
-      </div>
-    </div>
-  </div>
-	<script>
+<script>
 	sliderJQuery = jQuery.noConflict();
 	sliderJQuery(function( $ ) {
 	    $.global = new Object();
@@ -548,6 +453,102 @@
 	      resetAutoSlide();
 	});
 	</script>
+</head>
+<body>
+
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-wide w3-padding w3-card">
+    <a href="#home" class="w3-bar-item w3-button">Bernice Wicks Comics</a>
+    <!-- Float links to the right. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="#comics" class="w3-bar-item w3-button">Comics</a>
+      <a href="#about" class="w3-bar-item w3-button">About</a>
+      <a href="#drawings" class="w3-bar-item w3-button">Drawings</a>
+    </div>
+  </div>
+</div>
+
+<!-- Header -->
+<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+  <img class="w3-image" src="/images/tree.jpg" alt="tree" width="1500" height="800">
+  <div class="w3-display-middle w3-margin-top w3-center">
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min">Bernice Wicks</span> <span class="w3-hide-small w3-text-light-grey">Comics</span></h1>
+  </div>
+</header>
+
+<!-- Page content -->
+<div class="w3-content w3-padding" style="max-width:1564px">
+
+  <!-- Comics Section -->
+ 
+  <div class="w3-container w3-padding-32" id="comics">
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Comics</h3>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Rain</div>
+        <div id="slide-window2">
+            <ol id="slides-list2">
+                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky1.jpg);"></li>
+                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky2.jpg);"></li>
+                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky3.jpg);"></li>
+                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky4.jpg);"></li>
+            </ol>
+            <span class="nav2 fa fa-chevron-left fa-2x" id="left2"></span>
+            <span class="nav2 fa fa-chevron-right fa-2x" id="right2"></span>
+        </div>
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
+        <img src="/w3images/house2.jpg" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
+        <img src="/w3images/house3.jpg" alt="House" style="width:100%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
+        <img src="/w3images/house4.jpg" alt="House" style="width:100%">
+      </div>
+    </div>
+  </div>
+
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
+        <img src="/w3images/house2.jpg" alt="House" style="width:99%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
+        <img src="/w3images/house5.jpg" alt="House" style="width:99%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
+        <img src="/w3images/house4.jpg" alt="House" style="width:99%">
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-display-container">
+        <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
+        <img src="/w3images/house3.jpg" alt="House" style="width:99%">
+      </div>
+    </div>
+  </div>
+	
 
   <!-- About Section -->
   <div class="w3-container w3-padding-32" id="about">
@@ -559,10 +560,11 @@
       <img src="/images/selfportraitSmall.jpg" alt="line drawing of person's head and shoulders facing forward" width="300" height="300">
     </div>
     <div>
-      <p>Bernice Wicks likes wrens, and the way they collectively dive into a bush.  She also likes the sudden appearance of foxgloves on a bike ride, \
-and the ocean on a windy June night. For these reasons she is grateful to the generosity of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors \
-and families for allowing her to live on their Land.  She recognizes that settler oppression of Indigenous peoples exists and a more equitable society \
+      <p>Bernice Wicks likes wrens, and the way they collectively dive into a bush.  She also likes the sudden appearance of foxgloves on a bike ride, 
+and the ocean on a windy June night. For these reasons she is grateful to the generosity of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors
+and families for allowing her to live on their Land.  She recognizes that settler oppression of Indigenous peoples exists and a more equitable society 
 must be created. <br>
+	      <br>
 She has been published by <i>Geist Magazine</i>. </p>
     </div>
   </div>
