added jquery and bootstrap ref

--- a/index.html
+++ b/index.html
@@ -234,6 +234,9 @@
     width: 40px;
 }
 </style>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" crossorigin="anonymous"></script>
 <script>
 	sliderJQuery = jQuery.noConflict();
 	sliderJQuery(function( $ ) {
