--- a/index.html
+++ b/index.html
@@ -507,47 +507,32 @@
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="/w3images/house2.jpg" alt="House" style="width:100%">
+        <div class="w3-display-topleft w3-black w3-padding">This is just to say</div>
+        <div id="slide-window">
+	    <ol id="slides-list">
+			<li class="slide" style="background-image:url(http://berwickity.com/plums/plums1.jpg);"></li>
+			<li class="slide" style="background-image:url(http://berwickity.com/plums/plums2.jpg);"></li>
+			<li class="slide" style="background-image:url(http://berwickity.com/plums/plums3.jpg);"></li>
+			<li class="slide" style="background-image:url(http://berwickity.com/plums/plums4.jpg);"></li>
+	    </ol>
+	    <span class="nav1 fa fa-chevron-left fa-2x" id="left"></span>
+	    <span class="nav1 fa fa-chevron-right fa-2x" id="right"></span>
+	</div>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="/w3images/house3.jpg" alt="House" style="width:100%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="/w3images/house4.jpg" alt="House" style="width:100%">
-      </div>
-    </div>
-  </div>
-
-  <div class="w3-row-padding">
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Summer House</div>
-        <img src="/w3images/house2.jpg" alt="House" style="width:99%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Brick House</div>
-        <img src="/w3images/house5.jpg" alt="House" style="width:99%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Renovated</div>
-        <img src="/w3images/house4.jpg" alt="House" style="width:99%">
-      </div>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <div class="w3-display-container">
-        <div class="w3-display-topleft w3-black w3-padding">Barn House</div>
-        <img src="/w3images/house3.jpg" alt="House" style="width:99%">
+        <div class="w3-display-topleft w3-black w3-padding">Reading Dream</div>
+        <div id="slide-window3">
+	    <ol id="slides-list3">
+			<li class="slide3" style="background-image:url(http://berwickity.com/war/war1.jpg);"></li>
+			<li class="slide3" style="background-image:url(http://berwickity.com/war/war2.jpg);"></li>
+			<li class="slide3" style="background-image:url(http://berwickity.com/war/war3.jpg);"></li>
+			<li class="slide3" style="background-image:url(http://berwickity.com/war/war4.jpg);"></li>
+	    </ol>
+	    <span class="nav3 fa fa-chevron-left fa-2x" id="left3"></span>
+	    <span class="nav3 fa fa-chevron-right fa-2x" id="right3"></span>
+	</div>
       </div>
     </div>
   </div>
