--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  <style>
 .grid-container {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  background-color: transparent;
-  padding: 10px;
-  grid-gap: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  height: 300px;
+  justify-content: center;
+  align-items: center;;
 }
 .grid-item {
   background-color: transparent;
