replaced http with https

--- a/index.html
+++ b/index.html
@@ -495,10 +495,10 @@
         <div class="w3-display-topleft w3-black w3-padding">Rain</div>
         <div id="slide-window2">
             <ol id="slides-list2">
-                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky1.jpg);"></li>
-                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky2.jpg);"></li>
-                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky3.jpg);"></li>
-                        <li class="slide2" style="background-image:url(http://berwickity.com/leaky/leaky4.jpg);"></li>
+                        <li class="slide2" style="background-image:url(https://berwickity.com/leaky/leaky1.jpg);"></li>
+                        <li class="slide2" style="background-image:url(https://berwickity.com/leaky/leaky2.jpg);"></li>
+                        <li class="slide2" style="background-image:url(https://berwickity.com/leaky/leaky3.jpg);"></li>
+                        <li class="slide2" style="background-image:url(https://berwickity.com/leaky/leaky4.jpg);"></li>
             </ol>
             <span class="nav2 fa fa-chevron-left fa-2x" id="left2"></span>
             <span class="nav2 fa fa-chevron-right fa-2x" id="right2"></span>
@@ -510,10 +510,10 @@
         <div class="w3-display-topleft w3-black w3-padding">This is just to say</div>
         <div id="slide-window">
 	    <ol id="slides-list">
-			<li class="slide" style="background-image:url(http://berwickity.com/plums/plums1.jpg);"></li>
-			<li class="slide" style="background-image:url(http://berwickity.com/plums/plums2.jpg);"></li>
-			<li class="slide" style="background-image:url(http://berwickity.com/plums/plums3.jpg);"></li>
-			<li class="slide" style="background-image:url(http://berwickity.com/plums/plums4.jpg);"></li>
+			<li class="slide" style="background-image:url(https://berwickity.com/plums/plums1.jpg);"></li>
+			<li class="slide" style="background-image:url(https://berwickity.com/plums/plums2.jpg);"></li>
+			<li class="slide" style="background-image:url(https://berwickity.com/plums/plums3.jpg);"></li>
+			<li class="slide" style="background-image:url(https://berwickity.com/plums/plums4.jpg);"></li>
 	    </ol>
 	    <span class="nav1 fa fa-chevron-left fa-2x" id="left"></span>
 	    <span class="nav1 fa fa-chevron-right fa-2x" id="right"></span>
@@ -525,10 +525,10 @@
         <div class="w3-display-topleft w3-black w3-padding">Reading Dream</div>
         <div id="slide-window3">
 	    <ol id="slides-list3">
-			<li class="slide3" style="background-image:url(http://berwickity.com/war/war1.jpg);"></li>
-			<li class="slide3" style="background-image:url(http://berwickity.com/war/war2.jpg);"></li>
-			<li class="slide3" style="background-image:url(http://berwickity.com/war/war3.jpg);"></li>
-			<li class="slide3" style="background-image:url(http://berwickity.com/war/war4.jpg);"></li>
+			<li class="slide3" style="background-image:url(https://berwickity.com/war/war1.jpg);"></li>
+			<li class="slide3" style="background-image:url(https://berwickity.com/war/war2.jpg);"></li>
+			<li class="slide3" style="background-image:url(https://berwickity.com/war/war3.jpg);"></li>
+			<li class="slide3" style="background-image:url(https://berwickity.com/war/war4.jpg);"></li>
 	    </ol>
 	    <span class="nav3 fa fa-chevron-left fa-2x" id="left3"></span>
 	    <span class="nav3 fa fa-chevron-right fa-2x" id="right3"></span>
@@ -561,15 +561,15 @@ She has been published by <i>Geist Magazine</i>. </p>
   <div class="w3-container w3-padding-32" id="drawings">
     <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16">Daily Drawings</h3>
    <div class="grid-container">
-          <div class="grid-item"><img src="http://berwickity.com/images/apples.jpg" alt="apples in a plastic crate" width="300" height="300"></div>
-          <div class="grid-item"><img src="http://berwickity.com/images/catenjoysporch.jpg" alt="cat sleeping on porch under blue sky" width="300" height="300"></div>
-          <div class="grid-item"><img src="http://berwickity.com/images/plum.jpg" alt="round red-yellow plum on dried yellow grass" width="300" height="300"></div>  
-          <div class="grid-item"><img src="http://berwickity.com/images/willingdon.jpg" alt="receding bike path with grass and trees" width="300" height="300"></div>
-          <div class="grid-item"><img src="http://berwickity.com/images/acornink.jpg" alt="human back with hand and vein lines" width="300" height="300"></div>
-          <div class="grid-item"><img src="http://berwickity.com/images/dog.jpg" alt="dog facing viewer looking through window" width="300" height="300"></div>  
-          <div class="grid-item"><img src="http://berwickity.com/images/pinkblossoms.jpg" alt="pink blossems in crayon" width="300" height="300"></div>
-          <div class="grid-item"><img src="http://berwickity.com/images/catdrinks.jpg" alt="cat on porch smelling green watering can" width="300" height="300"></div>
-          <div class="grid-item"><img src="http://berwickity.com/images/dinnerfortwo.jpg" alt="small table on porch with two blue plates" width="300" height="300"></div>  
+          <div class="grid-item"><img src="https://berwickity.com/images/apples.jpg" alt="apples in a plastic crate" width="300" height="300"></div>
+          <div class="grid-item"><img src="https://berwickity.com/images/catenjoysporch.jpg" alt="cat sleeping on porch under blue sky" width="300" height="300"></div>
+          <div class="grid-item"><img src="https://berwickity.com/images/plum.jpg" alt="round red-yellow plum on dried yellow grass" width="300" height="300"></div>  
+          <div class="grid-item"><img src="https://berwickity.com/images/willingdon.jpg" alt="receding bike path with grass and trees" width="300" height="300"></div>
+          <div class="grid-item"><img src="https://berwickity.com/images/acornink.jpg" alt="human back with hand and vein lines" width="300" height="300"></div>
+          <div class="grid-item"><img src="https://berwickity.com/images/dog.jpg" alt="dog facing viewer looking through window" width="300" height="300"></div>  
+          <div class="grid-item"><img src="https://berwickity.com/images/pinkblossoms.jpg" alt="pink blossems in crayon" width="300" height="300"></div>
+          <div class="grid-item"><img src="https://berwickity.com/images/catdrinks.jpg" alt="cat on porch smelling green watering can" width="300" height="300"></div>
+          <div class="grid-item"><img src="https://berwickity.com/images/dinnerfortwo.jpg" alt="small table on porch with two blue plates" width="300" height="300"></div>  
         </div>
   </div>
  
@@ -578,10 +578,6 @@ She has been published by <i>Geist Magazine</i>. </p>
 </div>
 
 
-<!-- Footer -->
-<footer class="w3-center w3-black w3-padding-16">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-</footer>
 
 </body>
 </html>
