--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   text-align: center;
   width: 300px;
   height: 300px;
-  margin: 1.5 1.5rem;
+  flex: 0 0 33.333333%;
 }
 #slide-window {
     position: relative;
