--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   flex-wrap: wrap;
   height: 300px;
   justify-content: center;
-  align-items: center;;
+  align-items: center;
 }
 .grid-item {
   background-color: transparent;
@@ -22,6 +22,7 @@
   width: 300px;
   height: 300px;
   flex: 0 0 33.333333%;
+  image-resolution: 100px;
 }
 #slide-window {
     position: relative;
