--- a/index.html
+++ b/index.html
@@ -556,6 +556,9 @@ and families for allowing her to live on their Land.  She recognizes that settle
 must be created. <br>
 	      <br>
 She has been published by <i>Geist Magazine</i>. </p>
+	    
+<a href="mailto:berwickity@gmail.com"><i class='fa fa-envelope'></i></a> 
+<a href="https://www.instagram.com/_berwickity/"><i class='fa fa-instagram'></i></a> 
     </div>
   </div>
 
