--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
  <style>
+	 
+img {
+   image-resolution: 90dpi;
+	 }
 .grid-container {
   display: flex;
   flex-wrap: wrap;
@@ -22,7 +26,7 @@
   width: 300px;
   height: 300px;
   flex: 0 0 33.333333%;
-  image-resolution: 100px;
+
 }
 #slide-window {
     position: relative;
@@ -502,8 +506,8 @@
                         <li class="slide2" style="background-image:url(https://berwickity.com/leaky/leaky3.jpg);"></li>
                         <li class="slide2" style="background-image:url(https://berwickity.com/leaky/leaky4.jpg);"></li>
             </ol>
-            <span class="nav2 fa fa-chevron-left fa-2x" id="left2"></span>
-            <span class="nav2 fa fa-chevron-right fa-2x" id="right2"></span>
+            <span class="nav2 fa fa-chevron-left fa-5x" id="left2"></span>
+            <span class="nav2 fa fa-chevron-right fa-5x" id="right2"></span>
         </div>
       </div>
     </div>
