--- a/index.html
+++ b/index.html
@@ -506,8 +506,8 @@ img {
                         <li class="slide2" style="background-image:url(https://berwickity.com/leaky/leaky3.jpg);"></li>
                         <li class="slide2" style="background-image:url(https://berwickity.com/leaky/leaky4.jpg);"></li>
             </ol>
-            <span class="nav2 fa fa-chevron-left fa-5x" id="left2"></span>
-            <span class="nav2 fa fa-chevron-right fa-5x" id="right2"></span>
+            <span class="nav2 fa fa-chevron-left fa-4x" id="left2"></span>
+            <span class="nav2 fa fa-chevron-right fa-4x" id="right2"></span>
         </div>
       </div>
     </div>
@@ -521,8 +521,8 @@ img {
 			<li class="slide" style="background-image:url(https://berwickity.com/plums/plums3.jpg);"></li>
 			<li class="slide" style="background-image:url(https://berwickity.com/plums/plums4.jpg);"></li>
 	    </ol>
-	    <span class="nav1 fa fa-chevron-left fa-2x" id="left"></span>
-	    <span class="nav1 fa fa-chevron-right fa-2x" id="right"></span>
+	    <span class="nav1 fa fa-chevron-left fa-4x" id="left"></span>
+	    <span class="nav1 fa fa-chevron-right fa-4x" id="right"></span>
 	</div>
       </div>
     </div>
@@ -536,8 +536,8 @@ img {
 			<li class="slide3" style="background-image:url(https://berwickity.com/war/war3.jpg);"></li>
 			<li class="slide3" style="background-image:url(https://berwickity.com/war/war4.jpg);"></li>
 	    </ol>
-	    <span class="nav3 fa fa-chevron-left fa-2x" id="left3"></span>
-	    <span class="nav3 fa fa-chevron-right fa-2x" id="right3"></span>
+	    <span class="nav3 fa fa-chevron-left fa-4x" id="left3"></span>
+	    <span class="nav3 fa fa-chevron-right fa-4x" id="right3"></span>
 	</div>
       </div>
     </div>
@@ -561,8 +561,8 @@ must be created. <br>
 	      <br>
 She has been published by <i>Geist Magazine</i>. </p>
 	    
-<a href="mailto:berwickity@gmail.com"><i class='fa fa-envelope'></i></a> 
-<a href="https://www.instagram.com/_berwickity/"><i class='fa fa-instagram'></i></a> 
+<a href="mailto:berwickity@gmail.com"><i class='fa fa-envelope fa-2xl'></i></a> 
+<a href="https://www.instagram.com/_berwickity/"><i class='fa fa-instagram fa-2xl'></i></a> 
     </div>
   </div>
 
