--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ img {
 #left {
     float: left;
     display: inline-block;
-    width: 40px;
+    width: 35px;
 	background: transparent;
     position: relative;
 }
@@ -122,14 +122,14 @@ img {
 #right {
     float: right;
     display: inline-block;
-    width: 40px;
+    width: 35px;
 	background: transparent;
     position: relative;
 }
 #left2 {
     float: left;
     display: inline-block;
-    width: 40px;
+    width: 35px;
 	background: transparent;
     position: relative;
 }
@@ -138,7 +138,7 @@ img {
     float:right;
     display: inline-block;
 	background: transparent;
-    width: 40px;
+    width: 35px;
     position: relative;
 }
 #slide-window2 {
@@ -228,7 +228,7 @@ img {
 #left3 {
     float: left;
     display: inline-block;
-    width: 40px;
+    width: 35px;
 	background: transparent;
 }
 
@@ -237,7 +237,7 @@ img {
     display: inline-block;
 	background: transparent;
     position: relative;
-    width: 40px;
+    width: 35px;
 }
 </style>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -561,8 +561,8 @@ must be created. <br>
 	      <br>
 She has been published by <i>Geist Magazine</i>. </p>
 	    
-<a href="mailto:berwickity@gmail.com"><i class='fa fa-envelope fa-2xl'></i></a> 
-<a href="https://www.instagram.com/_berwickity/"><i class='fa fa-instagram fa-2xl'></i></a> 
+<a href="mailto:berwickity@gmail.com"><i class='fa fa-envelope fa-4x'></i></a> 
+<a href="https://www.instagram.com/_berwickity/"><i class='fa fa-instagram fa-4x'></i></a> 
     </div>
   </div>
 
