--- a/index.html
+++ b/index.html
@@ -113,7 +113,6 @@ img {
 
 #left {
     float: left;
-    display: inline-block;
     width: 35px;
 	background: transparent;
     position: relative;
@@ -121,7 +120,6 @@ img {
 
 #right {
     float: right;
-    display: inline-block;
     width: 35px;
 	background: transparent;
     position: relative;
@@ -140,6 +138,7 @@ img {
 	background: transparent;
     width: 35px;
     position: relative;
+    margin:-5px;
 }
 #slide-window2 {
     position: relative;
