--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@ img {
     </div>
     <div>
       <p>Bernice Wicks likes wrens, and the way they collectively dive into a bush.  She also likes the sudden appearance of foxgloves on a bike ride, 
-and the ocean on a windy June night. For these reasons she is grateful to the generosity of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors
+and the ocean on a windy June night. For these reasons she is grateful for the generosity of the Xwsepsum (Esquimalt) and Lekwungen (Songhees) ancestors
 and families for allowing her to live on their Land.  She recognizes that settler oppression of Indigenous peoples exists and a more equitable society 
 must be created. <br>
 	      <br>
